# ironcub-models

./: .gitignore  CMakeLists.txt  README.md  model.config.in  pixi.toml
iRonCub/: README.md
iRonCub-Mk3/iRonCub/: README.md
iRonCub-Mk3/iRonCub/conf/: gazebo_icub_head_without_eyes_V2_7.ini  gazebo_icub_inertial.ini  gazebo_icub_left_arm_no_hand_for_no_hand_model.ini  gazebo_icub_right_arm_no_hand_for_no_hand_model.ini  gazebo_icub_right_leg.ini  gazebo_icub_torso.ini  iRonCub.xml
iRonCub-Mk3/iRonCub/conf/FT/: gazebo_icub_left_arm_ft.ini  gazebo_icub_left_foot_front_ft.ini  gazebo_icub_left_foot_rear_ft.ini  gazebo_icub_left_jet_ft.ini  gazebo_icub_left_leg_ft.ini  gazebo_icub_right_arm_ft.ini  gazebo_icub_right_foot_front_ft.ini  gazebo_icub_right_foot_rear_ft.ini  gazebo_icub_right_jet_ft.ini
iRonCub-Mk3/iRonCub/conf/wrappers/: basestate_nws.xml
iRonCub-Mk3/iRonCub/conf/wrappers/FT/: left_arm-FT_wrapper.xml  left_foot-FT_remapper.xml  left_leg-FT_remapper.xml  right_arm-FT_remapper.xml  right_arm-FT_wrapper.xml  right_leg-FT_remapper.xml
iRonCub-Mk3/iRonCub/conf/wrappers/inertials/: xsens-inertials_wrapper.xml
iRonCub-Mk3/iRonCub/conf/wrappers/jets/: jets_wrapper.xml
iRonCub-Mk3/iRonCub/conf/wrappers/motorControl/: alljoints-mc_remapper.xml  left_arm-mc_remapper.xml  right_arm-mc_remapper.xml
iRonCub-Mk3/iRonCub/meshes/stl/: sim_head_head.stl  sim_head_neck_1.stl  sim_sea_3_jetpack.stl  sim_sea_l_arm_p250.stl
iRonCub-Mk3/iRonCub/robots/iRonCub-Mk3/: launch-fbe-analogsens.xml  launch-wholebodydynamics-iRonCub-thrust-est.xml  launch-yarp-robot-logger-no-cam.xml  launch-yarp-robot-logger.xml  model.config  model.urdf  model_stl.urdf  yarp-robot-logger-no-cam.xml  yarp-robot-logger.xml
iRonCub-Mk3/iRonCub/robots/iRonCub-Mk3_Gazebo/: model.config
iRonCub-Mk3/iRonCub/robots/iRonCub-Mk3_Mujoco/: iRonCub.xml
iRonCub-Mk3/iRonCub/robots/test/: launch_test.xml
iRonCub/conf/: README.md  base.ini  gazebo_icub_left_arm.ini  gazebo_icub_left_leg.ini  gazebo_icub_xsens_inertial.ini  jets.ini
iRonCub/conf/estimators/: wholebodydynamics-iRonCub.xml
iRonCub/conf/wrappers/FT/: left_arm-FT_remapper.xml  right_foot-FT_remapper.xml
iRonCub/meshes/: README.md
iRonCub/meshes/stl/: sim_sea_l_jet_turbine.stl  sim_sea_r_arm_p250.stl  sim_sea_r_jet_turbine.stl
iRonCub/robots/iRonCub-Mk3/estimators/: fbe-analogsens.xml
iRonCub/robots/iRonCub-Mk3_Gazebo/: launch-yarp-robot-logger.xml  model.urdf  model_stl.urdf  yarp-robot-logger.xml
iRonCub/robots/iRonCub-Mk3_Gazebo/interface/: ft-imu-mas-remapper.xml  ft_clients.xml  wrench_clients.xml
iRonCub/robots/test/: yarp-robot-logger.xml
(+8 files in other folders)
